# uPark

./: .gitignore  CMakeLists.txt  LICENSE  README.md
DB/: db_university.sql  db_upark.sql
main_server/src/: main.cpp
main_server/src/controller/: basic_controller.cpp  basic_controller.hpp  upark_controller.cpp  upark_controller.hpp
main_server/src/controller/endpoints_handling/: delete.cpp  endpoints_handling.hpp  get.cpp  post.cpp  put.cpp
main_server/src/database/: data_mapper.hpp  database.cpp  database.hpp
main_server/src/entities/booking/: booking.cpp  booking.hpp
main_server/src/entities/hourly_rate/: hourly_rate.cpp  hourly_rate.hpp
main_server/src/entities/parking_categories_allowed/: parking_categories_allowed.cpp  parking_categories_allowed.hpp
main_server/src/entities/parking_lot/: parking_lot.cpp  parking_lot.hpp
main_server/src/entities/parking_slot/: parking_slot.cpp  parking_slot.hpp
main_server/src/entities/user/: user.cpp  user.hpp
main_server/src/entities/user_category/: user_category.cpp  user_category.hpp
main_server/src/entities/vehicle/: vehicle.cpp  vehicle.hpp
main_server/src/entities/vehicle_type/: vehicle_type.cpp  vehicle_type.hpp
main_server/utility/: upark_server.key
parking_lot_client/: pl_app.py
parking_lot_client/utility/: license_plate_img_creator.py
processing_server/: CMakeLists.txt  main.cpp
processing_server/utility/: clients.json
src/: termination_handling.hpp
src/controller/: basic_controller.cpp  basic_controller.hpp  controller_interface.hpp  upark_controller.cpp  upark_controller.hpp
src/controller/endpoints_handling/: delete.cpp  get.cpp  post.cpp
src/database/: data_mapper.hpp  data_mapper_interface.hpp  database.cpp  database.hpp
src/entities/booking/: booking.cpp  booking.hpp
src/entities/hourly_rate/: hourly_rate.cpp  hourly_rate.hpp
src/entities/parking_categories_allowed/: parking_categories_allowed.cpp  parking_categories_allowed.hpp
src/entities/parking_lot/: parking_lot.cpp  parking_lot.hpp
src/entities/parking_slot/: parking_slot.cpp  parking_slot.hpp
src/entities/user/: user.cpp  user.hpp  vehicle_by_user.cpp
src/entities/user_category/: user_category.cpp  user_category.hpp
src/entities/vehicle/: vehicle.cpp  vehicle.hpp
src/entities/vehicle_type/: vehicle_type.cpp  vehicle_type.hpp
uPark_client/: .gitignore  admin_dashboard.py  home.py  login.py  signup.py  user_dashboard.py
uPark_client/convenience/: datetime_management.py  loading_indicator.py  server_apis.py
uPark_client/convenience_functions/: datetime_management.py  server_apis.py
uPark_client/entities/: booking.py  hourly_rate.py  parking_categories_allowed.py  parking_lot.py  parking_slot.py  user.py  user_category.py  vehicle.py  vehicle_type.py
uPark_client/ui_widgets/: dashboard.py
uPark_client/ui_widgets/admin/: admin_dashboard.py  parking.py  user_management.py
uPark_client/ui_widgets/admin/other_settings/: add_dialogs.py  base_dialog.py  edit_dialogs.py  other_settings.py
uPark_client/ui_widgets/common/: bookings.py  park.py  profile.py
uPark_client/ui_widgets/forms/: login.py  signup.py
uPark_client/ui_widgets/user/: bookings_expired.py  bookings_in_progress.py  park.py  profile.py  user_dashboard.py  user_vehicles.py
uPark_client/utility/: upark_server.crt
